<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.110000014"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/tv_register"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUsername"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textColorHint="#FFFFFF"


            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_registerNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"  android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_registerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"  android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_registerAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/register_etAgain"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoade"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/hollow_background"
        android:drawableEnd="@drawable/baseline_how_to_reg_24"
        android:fontFamily="sans-serif-black"
        android:text="@string/etSignup"
        android:textAllCaps="false"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="263dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/hollow_background"
        android:drawableEnd="@drawable/baseline_upload_24"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_Addimage"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_registerError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="255dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>